--- a/worker-deaths/index.html
+++ b/worker-deaths/index.html
@@ -28,8 +28,8 @@
   var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v9',
-    center: [34.8, 32.2],
-    zoom: 11.15
+    center: [35.0756745, 32.021775],
+    zoom: 8.53
    });
    map.on('load', function () {
     // Add a layer showing the places.
@@ -65,6 +65,12 @@
     map.on('mouseleave', 'places', function () {
         map.getCanvas().style.cursor = '';
     });
+
+     if (navigator.geolocation) {
+       navigator.geolocation.getCurrentPosition(function(position) {
+         map.flyTo({center: [position.coords.longitude, position.coords.latitude], zoom: 13});
+       });
+     }
 });
 </script>
 
