--- a/worker-deaths/index.html
+++ b/worker-deaths/index.html
@@ -78,6 +78,7 @@
             .setLngLat(e.features[0].geometry.coordinates)
             .setHTML(e.features[0].properties.description)
             .addTo(map);
+      map.flyTo({center: e.features[0].geometry.coordinates});
     });
 
     // Change the cursor to a pointer when the mouse is over the places layer.
