Fix bad popup content

--- a/worker-deaths/index.html
+++ b/worker-deaths/index.html
@@ -35,6 +35,9 @@
             z-index: 3;
         }
 
+        .mapboxgl-popup-content {
+            width: 100%;
+        }
         .mapboxgl-popup-tip {
             display: none;
         }
